[gd_scene load_steps=10 format=3 uid="uid://dkpppp5nyoaox"]

[ext_resource type="Script" uid="uid://dy2htt0do5l76" path="res://scripts/enemy.gd" id="1"]

[sub_resource type="Gradient" id="Gradient_7p1mj"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.250838, 0.222177, 0.126598, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_md0e3"]
gradient = SubResource("Gradient_7p1mj")
width = 32

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 64)

[sub_resource type="Gradient" id="Gradient_md0e3"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.337662)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ra3w"]
gradient = SubResource("Gradient_md0e3")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_5uy6h"]
colors = PackedColorArray(0.25098, 0.223529, 0.12549, 1, 0.25098, 0.223529, 0.12549, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_c4w8v"]
gradient = SubResource("Gradient_5uy6h")
width = 8

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xwavj"]
lifetime_randomness = 0.5
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(0.5, 0.5, 1)
emission_shape = 3
emission_box_extents = Vector3(32, 64, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 100.0
radial_accel_min = -2.23517e-06
radial_accel_max = 100.0
color_ramp = SubResource("GradientTexture1D_c4w8v")

[node name="Enemy" type="Area2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_md0e3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="HPBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -49.0
offset_top = -69.0
offset_right = 50.0
offset_bottom = -48.0
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 3.0
value = 3.0
show_percentage = false

[node name="HealthBarTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathAnimation" type="GPUParticles2D" parent="."]
emitting = false
amount = 160
texture = SubResource("GradientTexture2D_4ra3w")
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
fixed_fps = 60
trail_sections = 64
trail_section_subdivisions = 64
process_material = SubResource("ParticleProcessMaterial_xwavj")

[connection signal="timeout" from="HealthBarTimer" to="." method="_on_health_bar_timer_timeout"]
